--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
     "gh-pages": "^1.1.0",
+    "mocha": "^4.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
   "scripts": {
     "webpack": "webpack",
-    "serve": "webpack-dev-server"
+    "mocha": "mocha --compilers js:babel-core/register",
+    "serve": "webpack-dev-server",
+    "test": "mocha --watch --require babel-core/register ./test"
   },
   "repository": {
     "type": "git",
