--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "gh-pages": "^1.1.0",
-    "moment": "^2.19.4",
-    "moment-timezone": "^0.5.14"
+    "moment": "^2.19.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
