--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Timer for Salmon Run Time",
   "main": "index.js",
   "dependencies": {
+    "get-json-data": "^0.1.2",
     "gh-pages": "^1.1.0"
   },
   "devDependencies": {
