--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "Timer for Salmon Run Time",
   "main": "index.js",
   "dependencies": {
-    "get-json-data": "^0.1.2",
-    "gh-pages": "^1.1.0"
+    "get-json-data": "^0.1.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.1.2",
-    "gh-pages": "^1.1.0",
-    "mocha": "^4.0.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "chai": "^4.2.0",
+    "gh-pages": "^1.2.0",
+    "mocha": "^4.1.0",
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
     "webpack": "webpack",
