--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "get-json-data": "^0.1.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.3.4",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "chai": "^4.2.0",
     "gh-pages": "^1.2.0",
     "mocha": "^4.1.0",
-    "webpack": "^3.12.0",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
-    "webpack": "webpack",
+    "webpack": "webpack --config webpack.config.babel.js",
     "mocha": "mocha --compilers js:babel-core/register",
-    "serve": "webpack-dev-server",
+    "serve": "webpack-dev-server ",
     "test": "mocha --watch --require babel-core/register ./test"
   },
   "repository": {
