--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
   "name": "emaame.github.io",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "Timer for Salmon Run Time",
   "main": "index.js",
   "dependencies": {
     "get-json-data": "^0.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-loader": "^8.0.5",
+    "@babel/register": "^7.4.4",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "gh-pages": "^1.2.0",
     "mocha": "^4.1.0",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1"
   },
   "scripts": {
     "webpack": "webpack --config webpack.config.babel.js",
     "mocha": "mocha --compilers js:babel-core/register",
-    "serve": "webpack-dev-server ",
+    "serve": "webpack-dev-server  --host 192.168.1.4",
     "test": "mocha --watch --require babel-core/register ./test"
   },
   "repository": {
