--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "get-json-data": "^0.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.6",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.10.5",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
-    "gh-pages": "^1.2.0",
-    "mocha": "^6.2.2",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "gh-pages": "^3.1.0",
+    "mocha": "^8.0.1",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "webpack": "webpack --config webpack.config.babel.js",
-    "mocha": "mocha --compilers js:babel-core/register",
+    "mocha": "mocha --require @babel/register",
     "serve": "webpack-dev-server",
-    "test": "mocha --watch --require babel-core/register ./test"
+    "test": "mocha --watch --require @babel/register ./test"
   },
   "repository": {
     "type": "git",
