--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "get-json-data": "^0.1.2"
   },
   "devDependencies": {
+    "npm-force-resolutions": "^0.0.3",
     "@babel/core": "^7.10.5",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
@@ -20,7 +21,11 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
+  "resolutions": {
+    "minimist": ">=1.2.5"
+  },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "webpack": "webpack --config webpack.config.babel.js",
     "mocha": "mocha --require @babel/register",
     "serve": "webpack-dev-server",
