--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emaame.github.io",
-  "version": "1.2.0",
+  "version": "1.5.2",
   "description": "Timer for Salmon Run Time",
   "main": "index.js",
   "dependencies": {
@@ -16,14 +16,14 @@
     "chai": "^4.2.0",
     "gh-pages": "^3.1.0",
     "mocha": "^8.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.1.0",
+    "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "webpack": "webpack --config webpack.config.babel.js",
+    "webpack": "npx webpack --config webpack.config.babel.js",
     "mocha": "mocha --require @babel/register",
-    "serve": "webpack-dev-server",
+    "serve": "npx webpack serve",
     "test": "mocha --watch --require @babel/register ./test"
   },
   "repository": {
