--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "Timer for Salmon Run Time",
   "main": "index.js",
   "dependencies": {
-    "get-json-data": "^0.1.2"
+    "get-json-data": "^0.1.2",
+    "mock-local-storage": "^1.1.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.11.5",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.12.7",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/register": "^7.12.1",
+    "babel-loader": "^8.2.1",
     "chai": "^4.2.0",
     "gh-pages": "^3.1.0",
-    "mocha": "^8.1.3",
-    "webpack": "^5.1.0",
-    "webpack-cli": "^4.0.0",
+    "mocha": "^8.2.1",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "webpack": "npx webpack --config webpack.config.babel.js",
-    "mocha": "mocha --require @babel/register",
     "serve": "npx webpack serve",
-    "test": "mocha --watch --require @babel/register ./test"
+    "test": "mocha --watch --require @babel/register -r mock-local-storage ./test"
   },
   "repository": {
     "type": "git",
